--- a/.github/workflows/paint.yml
+++ b/.github/workflows/paint.yml
@@ -20,16 +20,21 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
 
       - name: Install dependencies
         run: |
+          node -v
           npm -v
+          nvm install 20
+          nvm use 20
+          rm -rf node_modules package-lock.json
           npm install
-          npm install react-router-dom
-          npm install lucide-react
+          npm install react-router-dom lucide-react
+          npm install --save-dev patch-package postinstall-postinstall
           npm ls react-router-dom
           npm run build
+
 
       - name: Archive site
         run: zip -r site-dist.zip dist
