--- a/.github/workflows/paint.yml
+++ b/.github/workflows/paint.yml
@@ -1,39 +1,43 @@
-name: Build and Test
+name: Build and deploy to GitHub Pages
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches:
+      - main
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Node.js 20
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20.19.0'
-          cache: 'npm'
-
-      - name: Show versions
-        run: |
-          node -v
-          npm -v
+          node-version: 18
 
       - name: Install dependencies
         run: |
-          rm -rf node_modules package-lock.json
-          npm ci
-          npm install react-router-dom lucide-react
-          npm install -D patch-package postinstall-postinstall
+          npm -v
+          npm install
+          npm install react-router-dom
+          npm install lucide-react
+          npm ls react-router-dom
+          npm run build
 
-      - name: Build project
-        run: npm run build
+      - name: Archive site
+        run: zip -r site-dist.zip dist
+
+      - name: Upload artifact for deployment
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./dist
 
   deploy:
     runs-on: ubuntu-latest
