--- a/.github/workflows/paint.yml
+++ b/.github/workflows/paint.yml
@@ -20,11 +20,13 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20  # Changed from 18 to 20
+          node-version: 20
 
       - name: Install dependencies
         run: |
           npm -v
+          # Install patch-package globally first if needed
+          npm install -g patch-package
           npm install
           npm run build
 
