--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^19.2.0",
     "react": "^19.2.0",
     "konva": "^10.0.8",
-    "react-konva": "^19.2.0"
+    "react-konva": "^19.2.0",
+    "firebase": "^12.5.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
